# EvoMSA

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: conda.yaml  pip.yaml  test.yaml
EvoMSA/: __init__.py  align.py  back_prop.py  base.py  bernulli.py  calibration.py  command_line.py  competitions.py  cython_utils.pyx  evodag.py  model.py  model_selection.py  text_preprocessing.py  text_repr.py  thumbs_up_down.py  unique.py  utils.py
EvoMSA/ConceptModelling/: text_preprocessing.py  thumbs_up_down.py
EvoMSA/ConceptModelling/data/: en.affective.words.json
EvoMSA/conf/: aggressiveness.ar  aggressiveness.en  aggressiveness.es  ar.affective.words.json  default_parameters.json  es.affective.words.json
EvoMSA/models/: .gitattributes  SCv1_En.evomsa  SS-Youtube_En.evomsa  b4msa_Ar.tm  b4msa_En.tm  b4msa_Es.tm  business_En.evomsa  ccat_En.evomsa  cricket_En.evomsa  emo-v0.23-ar.evoemo  emo-v0.23-en.evoemo  emo-v0.23-es.evoemo  ha_Ar.tm  ha_En.tm  ha_Es.tm  misoginia_Es.evomsa  news20c_En.evomsa  news4c_En.evomsa  nfl_En.evomsa  offenseval2019_C_En.evomsa  r10_En.evomsa  r8_En.evomsa  semeval2017_En.evomsa  semeval2018_sadness_En.evomsa  semeval2018_valence_En.evomsa  tass2018_s1_l1_Es.evomsa  tass2018_s1_l2_Es.evomsa  travel_En.evomsa
EvoMSA/tests/: test_align.py  test_back_prop.py  test_base.py  test_calibration.py  test_command_line.py  test_competitions.py  test_evodag.py  test_model.py  test_model_selection.py  test_text_repr.py  test_thumbs_up_down.py  test_unique.py  test_utils.py  tweets.json
conda-recipe/: meta.yaml
continuous-integration/: binstar-push.py  move-conda-package.py
continuous-integration/appveyor/: install.ps1
docs/: EvoMSA2.ipynb  Makefile  Quickstart.ipynb
docs/source/: acti.rst  aggress.rst  arabic.rst  base.rst  bow.rst  bow_api.rst  cites.rst  comp_systems.rst  competition.rst  conf.py  davincis.rst  dipromats.rst  edos.rst  emospace.rst  english.rst  ha.rst  haspeede.rst  hodi.rst  homo-mex.rst  hope.rst  huhu.rst  index.rst  model.rst  model_selection.rst  politices.rst  politicit.rst  restmex.rst  spanish.rst  stack.rst  stack_api.rst  tass.rst  text_repr.rst  text_repr_api.rst  th.rst  utils.rst  v1.rst  v2.rst
